--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -5,6 +5,7 @@
 .article-block{
   background-color: rgba(151, 146, 103, 0.195);
   border: 1px solid;
+  border-color: #cdcdcd;
   padding: 15px;
 }
 
@@ -14,4 +15,5 @@
 
 .title{
   font-size: 27px;
+  color: #656565;
 }
