--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_for article do |f| %>
   <div class="form-group">
-    <%= f.label :title, 'タイトル' %>
+    <%= f.label :title, 'TITLE' %>
     <%= f.text_field :title, class: 'form-control' %>
   </div>
   <div class="form-group">
-    <%= f.label :body, "本文" %>
+    <%= f.label :body, "MAIN" %>
     <%= f.text_area :body, row: 10,class: 'form-control' %>
   </div>
     <%= f.submit class: 'btn btn-success' %>
