--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="margin-top-5per article-block">
-    <h1 class="text-center"> ブログの編集 </h1>
+    <h1 class="text-center"> EDIT </h1>
       <%= render 'form', article: @article %>
   </div>
 </div>
