--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,12 +4,12 @@
       <%= link_to article do %>
         <div class="margin-top-5per article-block">
           <p class="title"><%= article.title %></p>
-          <span><%= article.created_at.strftime("%Y年%m月%d日") %></span>
+          <span style="color: #663333;"><%= article.created_at.strftime("%Y年%m月%d日 %H時%M分") %></span>
         </div>
       <% end %>
     <% end %>
   </div>
   <div class="row">
-    <%= link_to '新規作成', new_article_path, class: 'margin-top-5per btn btn-primary' %>
+    <%= link_to 'NewBlog', new_article_path, class: 'margin-top-5per btn btn-primary' %>
   </div>
 </div>
