--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,13 +15,13 @@
     <div class="collapse navbar-collapse" id="navigation">
       <p class="navbar-text navbar-right">
         <% if user_signed_in? %>
-          <%= link_to '新規作成', new_article_path %>
+          <%= link_to 'NewBlog', new_article_path %>
           &nbsp;
-          <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+          <%= link_to 'LogOut', destroy_user_session_path, method: :delete %>
         <% else %>
-          <%= link_to 'ユーザー登録', new_user_registration_path %>
+          <%= link_to 'UserCreate', new_user_registration_path %>
           &nbsp;
-          <%= link_to 'ログイン', new_user_session_path %>
+          <%= link_to 'LogIn', new_user_session_path %>
         <% end %>
       </p>
     </div>
